--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
@@ -16,6 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 5000",
     "deploy": "react-scripts build && aws s3 rm s3://mketimberdesigns.com/ --recursive && aws s3 cp ./build s3://mketimberdesigns.com/ --recursive --acl public-read"
   },
   "eslintConfig": {
